parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Dados
Rule 1     Dados -> WORD IGUAL Content
Rule 2     Dados -> ASPA ASPA IGUAL Content
Rule 3     Dados -> PLICA PLICA IGUAL Content
Rule 4     Dados -> INT IGUAL Content
Rule 5     Dados -> CONTENT IGUAL Content
Rule 6     Dados -> WORD IGUAL APC Conteudo FPC
Rule 7     Dados -> WORD IGUAL APC FPC
Rule 8     Dados -> NEWDICTIONARY
Rule 9     Dados -> NEWSUBDICTIONARY
Rule 10    Dados -> APR CONTENT FPR
Rule 11    Dados -> APR WORD FPR
Rule 12    Dados -> WORD WORD IGUAL Content
Rule 13    Dados -> WORD WORD WORD IGUAL Content
Rule 14    Dados -> INT WORD INT IGUAL Content
Rule 15    Dados -> FLOAT IGUAL Content
Rule 16    Content -> CONTENT
Rule 17    Content -> DATE
Rule 18    Content -> TIME
Rule 19    Content -> Lista
Rule 20    Content -> Palavras
Rule 21    Content -> LittleEndian
Rule 22    Content -> LittleEndianFloat
Rule 23    Content -> HEXADECIMAL
Rule 24    Content -> OCTAL
Rule 25    Content -> BINARIO
Rule 26    Content -> EXPONENCIACAO
Rule 27    Content -> signalInf
Rule 28    Content -> OFFSETDATETIME
Rule 29    Content -> LOCALDATETIME
Rule 30    Content -> LOCALDATE
Rule 31    Content -> LOCALTIME
Rule 32    Content -> BOOL
Rule 33    signalInf -> SIGNAL WORD
Rule 34    Conteudo -> Conteudo VIRG Dados
Rule 35    Conteudo -> Dados
Rule 36    LittleEndianFloat -> FLOATWITHUNDERSCORE OtherEndiansFloat
Rule 37    LittleEndian -> INTWITHUNDERSCORE OtherEndians
Rule 38    OtherEndians -> INTWITHUNDERSCORE OtherEndians
Rule 39    OtherEndiansFloat -> FLOATWITHUNDERSCORE OtherEndiansFloat
Rule 40    OtherEndians -> <empty>
Rule 41    OtherEndiansFloat -> <empty>
Rule 42    Content -> INT
Rule 43    Content -> FLOAT
Rule 44    Content -> SIGNAL INT
Rule 45    Content -> SIGNAL FLOAT
Rule 46    Content -> WORD FLOAT
Rule 47    Lista -> APR Elementos FPR
Rule 48    Lista -> APR FPR
Rule 49    Elementos -> Elementos VIRG Elemento
Rule 50    Elementos -> Elementos VIRG
Rule 51    Elementos -> Elemento
Rule 52    Elemento -> WORD
Rule 53    Elemento -> CONTENT
Rule 54    Elemento -> INT
Rule 55    Elemento -> FLOAT
Rule 56    Elemento -> Lista
Rule 57    Palavras -> WORD Palavras
Rule 58    Palavras -> <empty>

Terminals, with rules where they appear

APC                  : 6 7
APR                  : 10 11 47 48
ASPA                 : 2 2
BINARIO              : 25
BOOL                 : 32
CONTENT              : 5 10 16 53
DATE                 : 17
EXPONENCIACAO        : 26
FLOAT                : 15 43 45 46 55
FLOATWITHUNDERSCORE  : 36 39
FPC                  : 6 7
FPR                  : 10 11 47 48
HEXADECIMAL          : 23
IGUAL                : 1 2 3 4 5 6 7 12 13 14 15
INT                  : 4 14 14 42 44 54
INTWITHUNDERSCORE    : 37 38
LOCALDATE            : 30
LOCALDATETIME        : 29
LOCALTIME            : 31
NEWDICTIONARY        : 8
NEWSUBDICTIONARY     : 9
OCTAL                : 24
OFFSETDATETIME       : 28
PLICA                : 3 3
SIGNAL               : 33 44 45
TIME                 : 18
VIRG                 : 34 49 50
WORD                 : 1 6 7 11 12 12 13 13 13 14 33 46 52 57
error                : 

Nonterminals, with rules where they appear

Content              : 1 2 3 4 5 12 13 14 15
Conteudo             : 6 34
Dados                : 34 35 0
Elemento             : 49 51
Elementos            : 47 49 50
Lista                : 19 56
LittleEndian         : 21
LittleEndianFloat    : 22
OtherEndians         : 37 38
OtherEndiansFloat    : 36 39
Palavras             : 20 57
signalInf            : 27


state 0

    (0) S' -> . Dados
    (1) Dados -> . WORD IGUAL Content
    (2) Dados -> . ASPA ASPA IGUAL Content
    (3) Dados -> . PLICA PLICA IGUAL Content
    (4) Dados -> . INT IGUAL Content
    (5) Dados -> . CONTENT IGUAL Content
    (6) Dados -> . WORD IGUAL APC Conteudo FPC
    (7) Dados -> . WORD IGUAL APC FPC
    (8) Dados -> . NEWDICTIONARY
    (9) Dados -> . NEWSUBDICTIONARY
    (10) Dados -> . APR CONTENT FPR
    (11) Dados -> . APR WORD FPR
    (12) Dados -> . WORD WORD IGUAL Content
    (13) Dados -> . WORD WORD WORD IGUAL Content
    (14) Dados -> . INT WORD INT IGUAL Content
    (15) Dados -> . FLOAT IGUAL Content

    WORD            shift and go to state 2
    ASPA            shift and go to state 3
    PLICA           shift and go to state 4
    INT             shift and go to state 5
    CONTENT         shift and go to state 6
    NEWDICTIONARY   shift and go to state 7
    NEWSUBDICTIONARY shift and go to state 8
    APR             shift and go to state 9
    FLOAT           shift and go to state 10

    Dados                          shift and go to state 1

state 1

    (0) S' -> Dados .



state 2

    (1) Dados -> WORD . IGUAL Content
    (6) Dados -> WORD . IGUAL APC Conteudo FPC
    (7) Dados -> WORD . IGUAL APC FPC
    (12) Dados -> WORD . WORD IGUAL Content
    (13) Dados -> WORD . WORD WORD IGUAL Content

    IGUAL           shift and go to state 12
    WORD            shift and go to state 11


state 3

    (2) Dados -> ASPA . ASPA IGUAL Content

    ASPA            shift and go to state 13


state 4

    (3) Dados -> PLICA . PLICA IGUAL Content

    PLICA           shift and go to state 14


state 5

    (4) Dados -> INT . IGUAL Content
    (14) Dados -> INT . WORD INT IGUAL Content

    IGUAL           shift and go to state 15
    WORD            shift and go to state 16


state 6

    (5) Dados -> CONTENT . IGUAL Content

    IGUAL           shift and go to state 17


state 7

    (8) Dados -> NEWDICTIONARY .

    $end            reduce using rule 8 (Dados -> NEWDICTIONARY .)
    FPC             reduce using rule 8 (Dados -> NEWDICTIONARY .)
    VIRG            reduce using rule 8 (Dados -> NEWDICTIONARY .)


state 8

    (9) Dados -> NEWSUBDICTIONARY .

    $end            reduce using rule 9 (Dados -> NEWSUBDICTIONARY .)
    FPC             reduce using rule 9 (Dados -> NEWSUBDICTIONARY .)
    VIRG            reduce using rule 9 (Dados -> NEWSUBDICTIONARY .)


state 9

    (10) Dados -> APR . CONTENT FPR
    (11) Dados -> APR . WORD FPR

    CONTENT         shift and go to state 18
    WORD            shift and go to state 19


state 10

    (15) Dados -> FLOAT . IGUAL Content

    IGUAL           shift and go to state 20


state 11

    (12) Dados -> WORD WORD . IGUAL Content
    (13) Dados -> WORD WORD . WORD IGUAL Content

    IGUAL           shift and go to state 22
    WORD            shift and go to state 21


state 12

    (1) Dados -> WORD IGUAL . Content
    (6) Dados -> WORD IGUAL . APC Conteudo FPC
    (7) Dados -> WORD IGUAL . APC FPC
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    APC             shift and go to state 25
    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 24
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 13

    (2) Dados -> ASPA ASPA . IGUAL Content

    IGUAL           shift and go to state 49


state 14

    (3) Dados -> PLICA PLICA . IGUAL Content

    IGUAL           shift and go to state 50


state 15

    (4) Dados -> INT IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 51
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 16

    (14) Dados -> INT WORD . INT IGUAL Content

    INT             shift and go to state 52


state 17

    (5) Dados -> CONTENT IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 53
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 18

    (10) Dados -> APR CONTENT . FPR

    FPR             shift and go to state 54


state 19

    (11) Dados -> APR WORD . FPR

    FPR             shift and go to state 55


state 20

    (15) Dados -> FLOAT IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 56
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 21

    (13) Dados -> WORD WORD WORD . IGUAL Content

    IGUAL           shift and go to state 57


state 22

    (12) Dados -> WORD WORD IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 58
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 23

    (46) Content -> WORD . FLOAT
    (57) Palavras -> WORD . Palavras
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .

    FLOAT           shift and go to state 60
    WORD            shift and go to state 59
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)

    Palavras                       shift and go to state 61

state 24

    (1) Dados -> WORD IGUAL Content .

    $end            reduce using rule 1 (Dados -> WORD IGUAL Content .)
    FPC             reduce using rule 1 (Dados -> WORD IGUAL Content .)
    VIRG            reduce using rule 1 (Dados -> WORD IGUAL Content .)


state 25

    (6) Dados -> WORD IGUAL APC . Conteudo FPC
    (7) Dados -> WORD IGUAL APC . FPC
    (34) Conteudo -> . Conteudo VIRG Dados
    (35) Conteudo -> . Dados
    (1) Dados -> . WORD IGUAL Content
    (2) Dados -> . ASPA ASPA IGUAL Content
    (3) Dados -> . PLICA PLICA IGUAL Content
    (4) Dados -> . INT IGUAL Content
    (5) Dados -> . CONTENT IGUAL Content
    (6) Dados -> . WORD IGUAL APC Conteudo FPC
    (7) Dados -> . WORD IGUAL APC FPC
    (8) Dados -> . NEWDICTIONARY
    (9) Dados -> . NEWSUBDICTIONARY
    (10) Dados -> . APR CONTENT FPR
    (11) Dados -> . APR WORD FPR
    (12) Dados -> . WORD WORD IGUAL Content
    (13) Dados -> . WORD WORD WORD IGUAL Content
    (14) Dados -> . INT WORD INT IGUAL Content
    (15) Dados -> . FLOAT IGUAL Content

    FPC             shift and go to state 63
    WORD            shift and go to state 2
    ASPA            shift and go to state 3
    PLICA           shift and go to state 4
    INT             shift and go to state 5
    CONTENT         shift and go to state 6
    NEWDICTIONARY   shift and go to state 7
    NEWSUBDICTIONARY shift and go to state 8
    APR             shift and go to state 9
    FLOAT           shift and go to state 10

    Conteudo                       shift and go to state 62
    Dados                          shift and go to state 64

state 26

    (16) Content -> CONTENT .

    $end            reduce using rule 16 (Content -> CONTENT .)
    FPC             reduce using rule 16 (Content -> CONTENT .)
    VIRG            reduce using rule 16 (Content -> CONTENT .)


state 27

    (17) Content -> DATE .

    $end            reduce using rule 17 (Content -> DATE .)
    FPC             reduce using rule 17 (Content -> DATE .)
    VIRG            reduce using rule 17 (Content -> DATE .)


state 28

    (18) Content -> TIME .

    $end            reduce using rule 18 (Content -> TIME .)
    FPC             reduce using rule 18 (Content -> TIME .)
    VIRG            reduce using rule 18 (Content -> TIME .)


state 29

    (19) Content -> Lista .

    $end            reduce using rule 19 (Content -> Lista .)
    FPC             reduce using rule 19 (Content -> Lista .)
    VIRG            reduce using rule 19 (Content -> Lista .)


state 30

    (20) Content -> Palavras .

    $end            reduce using rule 20 (Content -> Palavras .)
    FPC             reduce using rule 20 (Content -> Palavras .)
    VIRG            reduce using rule 20 (Content -> Palavras .)


state 31

    (21) Content -> LittleEndian .

    $end            reduce using rule 21 (Content -> LittleEndian .)
    FPC             reduce using rule 21 (Content -> LittleEndian .)
    VIRG            reduce using rule 21 (Content -> LittleEndian .)


state 32

    (22) Content -> LittleEndianFloat .

    $end            reduce using rule 22 (Content -> LittleEndianFloat .)
    FPC             reduce using rule 22 (Content -> LittleEndianFloat .)
    VIRG            reduce using rule 22 (Content -> LittleEndianFloat .)


state 33

    (23) Content -> HEXADECIMAL .

    $end            reduce using rule 23 (Content -> HEXADECIMAL .)
    FPC             reduce using rule 23 (Content -> HEXADECIMAL .)
    VIRG            reduce using rule 23 (Content -> HEXADECIMAL .)


state 34

    (24) Content -> OCTAL .

    $end            reduce using rule 24 (Content -> OCTAL .)
    FPC             reduce using rule 24 (Content -> OCTAL .)
    VIRG            reduce using rule 24 (Content -> OCTAL .)


state 35

    (25) Content -> BINARIO .

    $end            reduce using rule 25 (Content -> BINARIO .)
    FPC             reduce using rule 25 (Content -> BINARIO .)
    VIRG            reduce using rule 25 (Content -> BINARIO .)


state 36

    (26) Content -> EXPONENCIACAO .

    $end            reduce using rule 26 (Content -> EXPONENCIACAO .)
    FPC             reduce using rule 26 (Content -> EXPONENCIACAO .)
    VIRG            reduce using rule 26 (Content -> EXPONENCIACAO .)


state 37

    (27) Content -> signalInf .

    $end            reduce using rule 27 (Content -> signalInf .)
    FPC             reduce using rule 27 (Content -> signalInf .)
    VIRG            reduce using rule 27 (Content -> signalInf .)


state 38

    (28) Content -> OFFSETDATETIME .

    $end            reduce using rule 28 (Content -> OFFSETDATETIME .)
    FPC             reduce using rule 28 (Content -> OFFSETDATETIME .)
    VIRG            reduce using rule 28 (Content -> OFFSETDATETIME .)


state 39

    (29) Content -> LOCALDATETIME .

    $end            reduce using rule 29 (Content -> LOCALDATETIME .)
    FPC             reduce using rule 29 (Content -> LOCALDATETIME .)
    VIRG            reduce using rule 29 (Content -> LOCALDATETIME .)


state 40

    (30) Content -> LOCALDATE .

    $end            reduce using rule 30 (Content -> LOCALDATE .)
    FPC             reduce using rule 30 (Content -> LOCALDATE .)
    VIRG            reduce using rule 30 (Content -> LOCALDATE .)


state 41

    (31) Content -> LOCALTIME .

    $end            reduce using rule 31 (Content -> LOCALTIME .)
    FPC             reduce using rule 31 (Content -> LOCALTIME .)
    VIRG            reduce using rule 31 (Content -> LOCALTIME .)


state 42

    (32) Content -> BOOL .

    $end            reduce using rule 32 (Content -> BOOL .)
    FPC             reduce using rule 32 (Content -> BOOL .)
    VIRG            reduce using rule 32 (Content -> BOOL .)


state 43

    (42) Content -> INT .

    $end            reduce using rule 42 (Content -> INT .)
    FPC             reduce using rule 42 (Content -> INT .)
    VIRG            reduce using rule 42 (Content -> INT .)


state 44

    (43) Content -> FLOAT .

    $end            reduce using rule 43 (Content -> FLOAT .)
    FPC             reduce using rule 43 (Content -> FLOAT .)
    VIRG            reduce using rule 43 (Content -> FLOAT .)


state 45

    (44) Content -> SIGNAL . INT
    (45) Content -> SIGNAL . FLOAT
    (33) signalInf -> SIGNAL . WORD

    INT             shift and go to state 65
    FLOAT           shift and go to state 66
    WORD            shift and go to state 67


state 46

    (47) Lista -> APR . Elementos FPR
    (48) Lista -> APR . FPR
    (49) Elementos -> . Elementos VIRG Elemento
    (50) Elementos -> . Elementos VIRG
    (51) Elementos -> . Elemento
    (52) Elemento -> . WORD
    (53) Elemento -> . CONTENT
    (54) Elemento -> . INT
    (55) Elemento -> . FLOAT
    (56) Elemento -> . Lista
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR

    FPR             shift and go to state 69
    WORD            shift and go to state 71
    CONTENT         shift and go to state 72
    INT             shift and go to state 73
    FLOAT           shift and go to state 74
    APR             shift and go to state 46

    Elementos                      shift and go to state 68
    Elemento                       shift and go to state 70
    Lista                          shift and go to state 75

state 47

    (37) LittleEndian -> INTWITHUNDERSCORE . OtherEndians
    (38) OtherEndians -> . INTWITHUNDERSCORE OtherEndians
    (40) OtherEndians -> .

    INTWITHUNDERSCORE shift and go to state 76
    $end            reduce using rule 40 (OtherEndians -> .)
    FPC             reduce using rule 40 (OtherEndians -> .)
    VIRG            reduce using rule 40 (OtherEndians -> .)

    OtherEndians                   shift and go to state 77

state 48

    (36) LittleEndianFloat -> FLOATWITHUNDERSCORE . OtherEndiansFloat
    (39) OtherEndiansFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (41) OtherEndiansFloat -> .

    FLOATWITHUNDERSCORE shift and go to state 78
    $end            reduce using rule 41 (OtherEndiansFloat -> .)
    FPC             reduce using rule 41 (OtherEndiansFloat -> .)
    VIRG            reduce using rule 41 (OtherEndiansFloat -> .)

    OtherEndiansFloat              shift and go to state 79

state 49

    (2) Dados -> ASPA ASPA IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD

    CONTENT         shift and go to state 26
    DATE            shift and go to state 27
    TIME            shift and go to state 28
    HEXADECIMAL     shift and go to state 33
    OCTAL           shift and go to state 34
    BINARIO         shift and go to state 35
    EXPONENCIACAO   shift and go to state 36
    OFFSETDATETIME  shift and go to state 38
    LOCALDATETIME   shift and go to state 39
    LOCALDATE       shift and go to state 40
    LOCALTIME       shift and go to state 41
    BOOL            shift and go to state 42
    INT             shift and go to state 43
    FLOAT           shift and go to state 44
    SIGNAL          shift and go to state 45
    WORD            shift and go to state 23
    APR             shift and go to state 46
    $end            reduce using rule 58 (Palavras -> .)
    FPC             reduce using rule 58 (Palavras -> .)
    VIRG            reduce using rule 58 (Palavras -> .)
    INTWITHUNDERSCORE shift and go to state 47
    FLOATWITHUNDERSCORE shift and go to state 48

    Content                        shift and go to state 80
    Lista                          shift and go to state 29
    Palavras                       shift and go to state 30
    LittleEndian                   shift and go to state 31
    LittleEndianFloat              shift and go to state 32
    signalInf                      shift and go to state 37

state 50

    (3) Dados -> PLICA PLICA IGUAL . Content
    (16) Content -> . CONTENT
    (17) Content -> . DATE
    (18) Content -> . TIME
    (19) Content -> . Lista
    (20) Content -> . Palavras
    (21) Content -> . LittleEndian
    (22) Content -> . LittleEndianFloat
    (23) Content -> . HEXADECIMAL
    (24) Content -> . OCTAL
    (25) Content -> . BINARIO
    (26) Content -> . EXPONENCIACAO
    (27) Content -> . signalInf
    (28) Content -> . OFFSETDATETIME
    (29) Content -> . LOCALDATETIME
    (30) Content -> . LOCALDATE
    (31) Content -> . LOCALTIME
    (32) Content -> . BOOL
    (42) Content -> . INT
    (43) Content -> . FLOAT
    (44) Content -> . SIGNAL INT
    (45) Content -> . SIGNAL FLOAT
    (46) Content -> . WORD FLOAT
    (47) Lista -> . APR Elementos FPR
    (48) Lista -> . APR FPR
    (57) Palavras -> . WORD Palavras
    (58) Palavras -> .
    (37) LittleEndian -> . INTWITHUNDERSCORE OtherEndians
    (36) LittleEndianFloat -> . FLOATWITHUNDERSCORE OtherEndiansFloat
    (33) signalInf -> . SIGNAL WORD
